@@ -5,6 +5,7 @@
   <title>$title</title>
   <link rel="stylesheet" href="$stylesheet">
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+$javascript
 </head>
 <body>
 
