@@ -1,0 +1,3 @@
+$(function() {
+    $("img.photo").lazyload({threshold: 200});
+});
