@@ -1,3 +1,8 @@
+2010-12-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* share/jquery.*.js: Added support for jQuery plugin for lazy
+	  loading images.
+
 2010-12-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* utils/sqldb.py: Added new module for sqlite.
